Working on generic cache class.